<resources>
    <string name="app_name">DirectShare</string>
    <string name="demo_title">DirectShareKit Method Demo</string>
    <string name="pick_single_file">Pick single file</string>
    <string name="pick_multiple_files">Pick multiple files</string>
    <string name="clear_selection">Clear selection</string>
    <string name="refresh_app_status">Refresh installed-app status</string>
    <string name="share_methods_section">All ShareManager methods</string>
    <string name="share_whatsapp_single">shareToWhatsApp (single)</string>
    <string name="share_whatsapp_multi">shareMultipleToWhatsApp (multiple)</string>
    <string name="share_telegram_single">shareToTelegram (single)</string>
    <string name="share_telegram_multi">shareMultipleToTelegram (multiple)</string>
    <string name="share_messenger_single">shareToMessenger (single)</string>
    <string name="share_messenger_multi">shareMultipleToMessenger (multiple)</string>
    <string name="share_gmail_single">shareViaGmail (single)</string>
    <string name="share_gmail_multi">shareMultipleViaGmail (multiple)</string>
    <string name="share_drive_single">shareViaDrive (single)</string>
    <string name="share_drive_multi">shareMultipleViaDrive (multiple)</string>
    <string name="share_generic_single">shareGeneric (single chooser)</string>
    <string name="share_generic_multi">shareMultiple (multiple chooser)</string>
    <string name="no_file_selected">No file selected yet</string>
    <string name="single_file_selected">1 file selected</string>
    <string name="multiple_files_selected">%1$d files selected</string>
    <string name="please_select_file">Please select file(s) first</string>
    <string name="please_select_single_file">Please select exactly one file first</string>
    <string name="please_select_multiple_files">Please select 2 or more files first</string>
    <string name="whatsapp_not_installed">WhatsApp is not installed</string>
    <string name="telegram_not_installed">Telegram is not installed</string>
    <string name="messenger_not_installed">Messenger is not installed</string>
    <string name="gmail_not_installed">Gmail is not installed</string>
    <string name="drive_not_installed">Google Drive is not installed</string>
    <string name="app_status_placeholder">App status will appear here</string>
    <string name="apps_status_template">WhatsApp: %1$s | Telegram: %2$s | Messenger: %3$s | Gmail: %4$s | Drive: %5$s</string>
    <string name="app_installed">Installed</string>
    <string name="app_not_installed">Not installed</string>
    <string name="demo_toast_select_single">Use "Pick single file" for single share methods.</string>
    <string name="demo_toast_select_multiple">Use "Pick multiple files" for multiple share methods.</string>
    <string name="file_selection_cleared">No files selected (picker canceled)</string>
</resources>